--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "12.1.6",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "17.0.36",
@@ -27,6 +28,7 @@
     "@types/react-dom": "18.0.5",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.7.2"
   }
 }
