--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@metaplex-foundation/mpl-candy-machine": "^4.2.0",
     "@project-serum/anchor": "0.14.0",
     "@solana/pay": "^0.2.0",
-    "@solana/spl-token": "0.1.8",
+    "@solana/spl-token": "^0.2.0",
     "@solana/web3.js": "^1.43.1",
     "bignumber.js": "^9.0.2",
     "bs58": "^5.0.0",
