--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.2.4",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@metaplex-foundation/mpl-candy-machine": "^4.2.0",
     "@project-serum/anchor": "0.14.0",
     "@solana/pay": "^0.2.0",
@@ -17,10 +20,11 @@
     "bignumber.js": "^9.0.2",
     "bs58": "^5.0.0",
     "dotenv": "^16.0.1",
+    "framer-motion": "^6.5.1",
     "next": "12.1.6",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-circular-progressbar": "^2.0.4",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.2.0"
   },
   "devDependencies": {
