--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@solana/pay": "^0.2.0",
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.43.1",
+    "axios": "^1.2.1",
     "bignumber.js": "^9.0.2",
     "bs58": "^5.0.0",
     "dotenv": "^16.0.1",
