--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@metaplex-foundation/js": "^0.19.4",
+    "@metaplex-foundation/mpl-bubblegum": "^0.7.0",
     "@metaplex-foundation/mpl-candy-machine": "^4.2.0",
+    "@metaplex-foundation/mpl-token-metadata": "^2.12.0",
     "@project-serum/anchor": "0.14.0",
     "@solana/pay": "^0.2.0",
-    "@solana/spl-token": "^0.1.8",
-    "@solana/web3.js": "^1.43.1",
+    "@solana/spl-account-compression": "^0.1.8",
+    "@solana/spl-token": "^0.3.7",
+    "@solana/web3.js": "^1.75.0",
     "axios": "^1.2.1",
     "bignumber.js": "^9.0.2",
     "bs58": "^5.0.0",
